--- a/package.json
+++ b/package.json
@@ -17,15 +17,13 @@
     "url": "https://github.com/milindgoel15/milindgoel15.github.io/issues"
   },
   "homepage": "https://github.com/milindgoel15/milindgoel15.github.io#readme",
-  "devDependencies": {
+  "dependencies": {
     "autoprefixer": "^10.4.2",
     "postcss": "^8.4.5",
     "postcss-cli": "^9.1.0",
     "postcss-import": "^14.0.2",
+    "postcss-nesting": "^10.1.2",
     "postcss-scss": "^4.0.3",
     "tailwindcss": "^3.0.18"
-  },
-  "dependencies": {
-    "postcss-nesting": "^10.1.2"
   }
 }
