--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "type": "git",
     "url": "git+https://github.com/milindgoel15/milindgoel15.github.io.git"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": ["Milind Goel, Web Developer, MilindGoel15, milindgoel15.github.io"],
+  "author": {
+		"name": "Milind Goel",
+		"email": "milindgoel15@gmail.com",
+		"url": "https://github.com/milindgoel15"
+	},
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/milindgoel15/milindgoel15.github.io/issues"
