--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "milindgoel15.github.io",
-  "version": "2.0.0",
+  "version": "2.1.0",
   "description": "Personal portfolio built with TailwindCSS, AlpineJS & GSAP",
   "main": "./dist/bundle.js",
   "scripts": {
     "build": "postcss ./styles/main.scss -o ./styles/tailwindoutput.css --watch",
-    "webpack": "webpack"
+    "webpack": "webpack --watch"
   },
   "repository": {
     "type": "git",
